--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@upstash/ratelimit": "^0.3.8",
     "@upstash/redis": "^1.19.1",
     "@vercel/analytics": "^0.1.11",
+    "antd": "^5.8.4",
     "framer-motion": "^8.2.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-compare-slider": "^2.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-rotating-text": "^1.4.1",
     "react-uploader": "^3.10.0",
