오늘 또한거

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^0.1.11",
     "antd": "^5.8.4",
     "framer-motion": "^8.2.4",
+    "lucide-react": "^0.268.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-compare-slider": "^2.2.0",
@@ -23,6 +24,7 @@
     "react-indiana-drag-scroll": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-rotating-text": "^1.4.1",
+    "react-sketch-canvas": "^6.2.0",
     "react-uploader": "^3.10.0",
     "react-use-measure": "^2.1.1",
     "request-ip": "^3.3.0",
