아 좀 이상한데 오늘

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@vercel/analytics": "^0.1.11",
     "antd": "^5.8.4",
     "framer-motion": "^8.2.4",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "lucide-react": "^0.268.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-compare-slider": "^2.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.0",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-rotating-text": "^1.4.1",
@@ -37,7 +40,9 @@
     "@types/react-dom": "18.0.6",
     "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.12",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.18",
+    "prettier": "3.0.2",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
