--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/reactstrap": "^8.7.2",
     "@upstash/ratelimit": "^0.3.8",
     "@upstash/redis": "^1.19.1",
     "@vercel/analytics": "^0.1.11",
